Fixed th-tag and code-tag issue in xbbcode.js, and spelling typo in index.htm

--- a/examples/index.htm
+++ b/examples/index.htm
@@ -21,7 +21,7 @@
                 <textarea id="inputCode"></textarea>
                 <p></p>
                 <input type="checkbox" id="cbRmMisTags"/> Remove misaligned tags<br/>
-                <input type="checkbox" id="cbAddLb" /> Added line break tags where line breaks exist<p/>
+                <input type="checkbox" id="cbAddLb" /> Add in line break tags where line breaks exist<p/>
                 Test Cases: <select id="testCaseList">
                     <option value="">-- Select a Test Case --</option>
                     <option value="Color Faded Text">Color Faded Text</option>
